modal overflow fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1196,6 +1196,9 @@ tbody .table-row:first-child{
 .justify-self-end{
   justify-self: end;
 }
+.\!overflow-auto{
+  overflow: auto !important;
+}
 .overflow-auto{
   overflow: auto;
 }
@@ -2372,16 +2375,6 @@ textarea {
 
   .xl\:w-1\/3{
     width: 33.333333%;
-  }
-
-  .xl\:px-64{
-    padding-left: 16rem;
-    padding-right: 16rem;
-  }
-
-  .xl\:px-52{
-    padding-left: 13rem;
-    padding-right: 13rem;
   }
 }
 
